# cognite_dm_skilling

./: .env.template  .pre-commit-config.yaml  LICENSE.txt  README.md  cdf.toml  pyproject.toml
rmdm/: config.dev.yaml
rmdm/modules/Session1/data_models/containers/: Equipment.Container.yaml  EquipmentClass.Container.yaml  rmdm_Notification.Container.yaml
rmdm/modules/dmu/data_models/views/: Equipment.View.yaml  FileExt.View.yaml  Notification.View.yaml
rmdm/modules/dmu/data_sets/: data_sets.DataSet.yaml
rmdm/modules/dmu/transformations/tr-COGCORE-COGATY/: tr-COGCORE-COGATY.Transformation.yaml
rmdm/modules/dmu/transformations/tr-COGCORE-COGATY-DEL/: tr-COGCORE-COGATY-DEL.Transformation.yaml
rmdm/modules/dmu/transformations/tr-COGCORE-COGDSC-DEL/: tr-COGCORE-COGDSC-DEL.Transformation.yaml
rmdm/modules/dmu/transformations/tr-COGCORE-COGFLCA/: tr-COGCORE-COGFLCA.Transformation.yaml
rmdm/modules/dmu/transformations/tr-COGCORE-COGFLCA-DEL/: tr-COGCORE-COGFLCA-DEL.Transformation.yaml
rmdm/modules/dmu/transformations/tr-COGCORE-COGSRC/: tr-COGCORE-COGSRC.Transformation.yaml
rmdm/modules/dmu/transformations/tr-COGCORE-COGSRC-DEL/: tr-COGCORE-COGSRC-DEL.Transformation.yaml
rmdm/modules/dmu/transformations/tr-RMDM-ASSET-CNY/: tr-RMDM-ASSET-CNY.Transformation.yaml
rmdm/modules/dmu/transformations/tr-RMDM-ASSET-DEL/: tr-RMDM-ASSET-DEL.Transformation.yaml
rmdm/modules/dmu/transformations/tr-RMDM-ASSET-FLD/: tr-RMDM-ASSET-FLD.Transformation.yaml
rmdm/modules/dmu/transformations/tr-RMDM-ASSET-PLTF/: tr-RMDM-ASSET-PLTF.Transformation.yaml
(+41 files in other folders)
